изменение основного логотипа

--- a/template/main.html
+++ b/template/main.html
@@ -28,7 +28,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/"><img src="/img/br_logo_white.png"/></a>
+          <a class="brand" href="/"><img src="/img/uwc_logo_white.png"/></a>
           <!--
           <div class="nav-collapse">
             <ul class="nav">
@@ -62,7 +62,7 @@
       <hr>
 
       <footer>
-        <p>&copy; NoName company 2012</p>
+        <p>&copy; NoName company 2016</p>
       </footer>
 
     </div> <!-- /container -->
