--- a/template/base.html
+++ b/template/base.html
@@ -31,7 +31,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/"><img src="/img/br_logo_white.png"/></a>
+          <a class="brand" href="/"><img src="/img/uwc_logo_white.png"/></a>
           <div class="nav-collapse">
           <!--
             <ul class="nav">
