--- a/template/base.html
+++ b/template/base.html
@@ -45,14 +45,14 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
 
       <!-- Example row of columns -->
    
       <!--<div class="hero-unit">-->
         
         <!--</div>-->
-    <div class="row-fluid">
+    <div class="row">
     <div class="span6"><h1>{% block title_page %}{% endblock %}</h1></div>
     <div class="span6"><div class="navbar-text pull-right">Добро пожаловать, {% block user %}{% endblock %}</div></div>
     </div>
