Изменения рейтинговой системы

--- a/template/entities/adminconsole_base.html
+++ b/template/entities/adminconsole_base.html
@@ -32,7 +32,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/"><img src="/img/br_logo_white.png"/></a>
+          <a class="brand" href="/"><img src="/img/uwc_logo_white.png"/></a>
           <!--
           <div class="nav-collapse">
             <ul class="nav">
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <!--<div class="hero-unit">-->
