--- a/template/adminconsole.html
+++ b/template/adminconsole.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <!--<div class="hero-unit">-->
@@ -60,7 +60,7 @@
   <hr>
 
       <footer>
-        <p>&copy; NoName company 2014</p>
+        <p>&copy; NoName company 2016</p>
       </footer>
 
     </div> <!-- /container -->
