--- a/template/adminconsole_base.html
+++ b/template/adminconsole_base.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <!--<div class="hero-unit">-->
@@ -59,7 +59,7 @@
   <hr>
 
       <footer>
-        <p>&copy; NoName company 2014</p>
+        <p>&copy; NoName company2016</p>
       </footer>
 
     </div> <!-- /container -->
