--- a/template/list/adminconsole_base.html
+++ b/template/list/adminconsole_base.html
@@ -33,7 +33,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/"><img src="/img/br_logo_white.png"/></a>
+          <a class="brand" href="/"><img src="/img/uwc_logo_white.png"/></a>
           <!--
           <div class="nav-collapse">
             <ul class="nav">
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <!--<div class="hero-unit">-->
@@ -60,7 +60,7 @@
   <hr>
 
       <footer>
-        <p>&copy; NoName company 2012</p>
+        <p>&copy; NoName company 2016</p>
       </footer>
 
     </div> <!-- /container -->
